# crw-shield

./: .gitignore  .opencode.md  ANTIBOT_RESEARCH.md  CHANGELOG.md  CLOUDFLARE_BYPASS_RESEARCH.md  Cargo.toml  DEVELOPING.md  Dockerfile  Dockerfile.dev  LICENSE  PLAN.md  README.md  RELEASING.md  RESEARCH_FIRECRAWL_ANTIBOT.md  TLS_FINGERPRINT_RESEARCH.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
bench/: ANTIBOT_LANDSCAPE_2026.md  A_B_30SITE_BENCH.md  BENCHMARK.md  CORTEX_BRIDGE_BENCH.md  HERMES_VS_CRW.md  HONEST_BENCH_5_DURS.md  SOUS_PHASE_1_BENCH.md  SOUS_PHASE_2_BENCH.md
crates/antibot/: Cargo.toml
crates/antibot/src/: block_detection.rs  cdp_stealth.rs  challenge_detect.rs  cookie_jar.rs  firefox_profiles.rs  http_stealth.rs  lib.rs  providers.toml  rotation.rs  situation.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  types.rs
crates/crawl/: Cargo.toml
crates/crawl/src/: lib.rs
crates/extract/: Cargo.toml  NOTICE
crates/extract/src/: content.rs  firecrawl_compat.rs  lib.rs  links.rs  markdown.rs  metadata.rs
crates/extract/tests/: bench_v4.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: cdp.rs  flaresolverr.rs  headed_hitl.rs  http.rs  ladder.rs  lib.rs  tls_profile.rs  tls_proxy.rs
crates/map/: Cargo.toml
crates/map/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  headed_solve.rs  headed_viewer.rs  lib.rs  main.rs  middleware.rs  rate_limit.rs  routes.rs  state.rs
crates/server/tests/: crawl_map_integration.rs  scrape_integration.rs
docs/: CARGO_CACHE_PITFALL.md  CONFIGURATION.md
tls-proxy/: README.md  go.mod  go.sum  main.go
