[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/antibot",
    "crates/extract",
    "crates/fetch",
    "crates/crawl",
    "crates/search",
    "crates/map",
    "crates/server",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["crw-shield contributors"]
rust-version = "1.83"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "cookies",
    "rustls-tls",
] }
# TLS-fingerprinting HTTP client (drop-in reqwest replacement backed by BoringSSL).
# Pulls in `boringssl` which needs cmake + a C/C++ toolchain at build time.
# We enable `gzip`/`brotli`/`deflate` so the auto-decompression path matches
# what real browsers do (otherwise wreq returns the raw compressed bytes and
# the response is unreadable).
wreq = { version = "5", default-features = false, features = ["gzip", "brotli", "deflate"] }
# wreq-util's `emulation` feature gates the browser Emulation enum; we enable
# just that + no compression features (we never expect brotli/zstd on the
# raw fingerprint path).
wreq-util = { version = "2", default-features = false, features = ["emulation"] }

# HTML parsing
scraper = "0.22"
htmd = "0.5"

# Errors
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
url = "2"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde", "std"] }
rand = "0.8"
once_cell = "1"
base64 = "0.22"

# Test
mockito = "1.5"

# Browser automation (CDP)
chromiumoxide = { version = "0.9", default-features = false }

# SQLite for the crawl job store
rusqlite = { version = "0.32", features = ["bundled"] }

# In-memory cache
moka = { version = "0.12", features = ["future"] }

# (Firecrawl html-extractor dep lives in crates/extract/Cargo.toml, not
# workspace, so it can be marked optional and gated behind a feature flag.
# Pin: rev=0a2b743 is the last commit on main, Jun 22 2026.
# See crates/extract/Cargo.toml for the actual dep declaration.)

# Futures utilities
futures = "0.3"

# Sitemap parsing
quick-xml = "0.36"

# URL/path filtering
regex = "1"

# Pinned transitive deps to remain compatible with Rust 1.83.
# Newer versions require edition2024 which is unstable in 1.83.
time = "<0.3.44"
time-core = "<0.1.4"
getrandom = "<0.3"
hashbrown = "<0.16"
icu_collections = "<1.5"
icu_locale_core = "<1.5"
icu_normalizer = "<1.5"
icu_normalizer_data = "<1.5"
icu_properties = "<1.5"
icu_properties_data = "<1.5"
icu_provider = "<1.5"
idna_adapter = "<1.2"
deranged = "<0.5"
indexmap = "2.5"
zeroize = "<1.9"
cookie_store = "<0.22"
hyper-rustls = "0.27"
wit-bindgen = "<0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true