[package]
name = "crw-antibot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crw-core = { path = "../core" }
rand = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }