[package]
name = "crw-crawl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crw-core = { path = "../core" }
crw-extract = { path = "../extract" }
crw-fetch = { path = "../fetch" }
url = { workspace = true }
regex = "1"
tokio = { workspace = true }
futures = "0.3"
async-trait = { workspace = true }
tracing = { workspace = true }