[package]
name = "crw-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crw-core = { path = "../core" }
# Phase C: situation-aware extraction (`extract_main_content_v3`).
# crw-antibot is a leaf crate, so this dep is acyclic.
crw-antibot = { path = "../antibot" }
scraper = { workspace = true }
ego-tree = "0.10"
htmd = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }