[package]
name = "crw-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crw-core = { path = "../core" }
crw-antibot = { path = "../antibot" }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }