[package]
name = "crw-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
# Chrome 131 / Firefox 128 / Safari 18 TLS+HTTP/2 fingerprinting on the HTTP
# path via the `wreq` crate (BoringSSL-backed). Default build is OFF to keep
# the production image lean (no cmake / C toolchain dependency at build time).
# Enable with: cargo build --features tls-fingerprint
# (Dockerfile.dev enables it by default.)
tls-fingerprint = ["dep:wreq", "dep:wreq-util"]

[dependencies]
crw-core = { path = "../core" }
crw-antibot = { path = "../antibot" }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chromiumoxide = { workspace = true }
futures = { workspace = true }
base64 = "0.22"
fastrand = "2"
wreq = { workspace = true, optional = true }
wreq-util = { workspace = true, optional = true }

[dev-dependencies]
mockito = { workspace = true }