[package]
name = "crw-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crw-core = { path = "../core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }