[package]
name = "crw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "crw-server"
path = "src/main.rs"

[dependencies]
crw-core = { path = "../core" }
crw-antibot = { path = "../antibot" }
crw-extract = { path = "../extract" }
crw-fetch = { path = "../fetch" }
crw-crawl = { path = "../crawl" }
crw-map = { path = "../map" }
crw-search = { path = "../search" }

axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = "1"

[dev-dependencies]
mockito = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }