[package]
name = "crw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "crw-server"
path = "src/main.rs"

[dependencies]
crw-core = { path = "../core" }
crw-antibot = { path = "../antibot" }
crw-extract = { path = "../extract" }
crw-fetch = { path = "../fetch" }
crw-crawl = { path = "../crawl" }
crw-map = { path = "../map" }
crw-search = { path = "../search" }

axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
anyhow = "1"
reqwest = { workspace = true }
# WebSocket client for the headed HITL viewer CDP proxy (v0.4.6).
# Matches the version used by chromiumoxide 0.9 for consistency.
async-tungstenite = { version = "0.32", features = ["tokio-runtime"] }
# Direct dependency on futures-util to disambiguate StreamExt impls
# between axum's WebSocket and async-tungstenite's WebSocketStream
# (both impl futures::Stream; the explicit name avoids conflicts).
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
mockito = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }